--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "pack": "build --dir",
     "dist": "build"
   },
+  "display_override": ["window-controls-overlay"],
   "dependencies": {
     "async": "~0.2.8",
     "body-parser": "^1.17.2",
