--- a/client/js/plugins/bungalow/manifest.json
+++ b/client/js/plugins/bungalow/manifest.json
@@ -15,6 +15,9 @@
         "plugin": {
             "regexp": "^bungalow:plugin"
         },
+        "concept": {
+            "regexp": "^bungalow:concept"
+        },
         "start": {
             "regexp": "^bungalow:internal:start"
         },
