--- a/package.json
+++ b/package.json
@@ -13,45 +13,20 @@
   "dependencies": {
     "async": "~0.2.8",
     "body-parser": "^1.17.2",
-    "busy": "^0.1.1",
-    "cheerio": "^1.0.0-rc.2",
     "connect-timeout": "^1.9.0",
     "cookie-parser": "^1.4.3",
     "cookie-session": "^2.0.0-beta.2",
     "crawler": "^1.1.2",
-    "deployd": "^1.1.1",
     "es6-promise": "^4.1.0",
-    "express": "~3.2.4",
+    "express": "~3.2.6",
     "express-router": "0.0.1",
     "express-session": "^1.15.3",
-    "https": "^1.0.0",
     "lastfmapi": "^0.1.1",
-    "less": "^2.7.2",
-    "loke-mysql-orm": "^1.11.0",
-    "md5": "^2.2.1",
-    "mock": "^0.1.1",
-    "mopidy": "^0.5.0",
-    "mysql": "mysqljs/mysql",
-    "mysql2": "^1.5.1",
-    "node-podcast-parser": "^2.1.0",
-    "node-wikipedia": "0.0.2",
-    "object-assign": "^4.1.1",
-    "open-graph-scraper": "^3.1.3",
-    "orm": "^4.0.1",
-    "parse": "^1.9.2",
-    "query-string": "^4.3.4",
+    "md5": "^2.3.0",
+    "open-graph-scraper": "^6.5.1",
     "querystring": "^0.2.0",
-    "react": "^16.4.1",
-    "react-router": "^4.2.0",
-    "request": "^2.81.0",
-    "sequelize": "^4.23.2",
-    "serve-favicon": "^2.5.0",
-    "socket.io": "~0.9.14",
-    "tmp": "0.0.33",
-    "why-is-node-running": "^2.0.3",
-    "wikipedia-js": "0.0.6",
-    "xml2js": "^0.4.19",
-    "xspf": "0.0.1"
+    "request": "^2.88.2",
+    "serve-favicon": "^2.5.0"
   },
   "build": {
     "appId": "com.buddhalow.app",
