--- a/client/js/services/spotify/manifest.json
+++ b/client/js/services/spotify/manifest.json
@@ -1,5 +1,5 @@
 {
-  "id": "com.spotify",
+  "id": "spotify",
   "name": "Spotify",
-  "domain": "spotify.retro.media.player.buddhaflow.local"
+  "domain": "spotify.com"
 }
